# use-godot

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cog.toml  dist-workspace.toml
.beads/: .gitignore  README.md  config.yaml  metadata.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  homebrew-audit.yml  policy.yml  release-policy.yml  release.yml
docs/: architecture.md  distribution.md  migration.md  shell-integration.md  testing.md  versioning.md
docs/designs/: tolerate-exit-noise.md
installers/: use-godot-installer.ps1.in  use-godot-installer.sh.in
proptest-regressions/: properties.txt
scripts/: check-version-policy.sh  install.sh  normalize-homebrew-formula.py  render-release-installers.py  smoke-release-installers.py  test-normalize-homebrew-formula.py  test-version-policy.sh
src/: atomic.rs  config.rs  exec.rs  exit_noise.rs  install.rs  lib.rs  main.rs  migration.rs  model.rs  paths.rs  project.rs  remote.rs  resolve.rs  state.rs
tests/: cli.rs  cli_contract.rs  cli_exit_noise.rs  cli_install.rs  cli_project_shell.rs  cli_state.rs  properties.rs
tests/support/: mod.rs
