[package]
name = "use-godot"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Safe, scriptable Godot version manager"
license = "MIT"
repository = "https://github.com/RafaelVidaurre/use-godot"
homepage = "https://github.com/RafaelVidaurre/use-godot"
documentation = "https://github.com/RafaelVidaurre/use-godot#readme"
readme = "README.md"
keywords = ["godot", "version-manager", "gamedev", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/tests/**",
    "/proptest-regressions/**",
    "/docs/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
]

[[bin]]
name = "ug"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
fs2 = "0.4"
hex = "0.4"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
same-file = "1.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
zip = { version = "4.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = { version = "1.11", default-features = false, features = ["std"] }
tiny_http = "0.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
formula = "ug"
